[project]
name = "lego-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.26.1",
    "pyside6>=6.8.0.2",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
